# data_access_layer

./: .gitignore  OLTP.README.md  README.md  connections_example.yaml  iceberg_queries_README.md  requirements.txt  setup.cfg
.github/: CODEOWNERS
src/data_access_layer/connections/: __init__.py  cloud_watch_connection.py  cloud_watch_logs_connection.py  connection.py  connection_manager.py  connections_factory.py  connections_parser.py  data_lake_connection.py  iceberg_glue_connection.py  kafka_connection.py  kafka_consumer_connection.py  kafka_producer_connection.py  object_store_connection.py  oltp_connection.py  postgresql_connection.py  rdbms_connection.py  s3_connection.py  stream_connection.py
src/data_access_layer/connectors/: Iceberg_glue_sink_connector.py  Iceberg_sink_connector.py  __init__.py  connector.py  connector_manager.py  connectors_factory.py  connectors_parser.py  message_buffer.py  s3_sink_connector.py  s3_source_connector.py  sink_connector.py  source_connector.py
src/data_access_layer/datasources/: __init__.py  cloud_watch_datasource.py  cloud_watch_logs_datasource.py  datalake_datasource.py  datasource.py  datasource_factory.py  datasource_manager.py  iceberg_datasource.py  iceberg_glue_datasource.py  kafka_consumer_datasource.py  kafka_datasource.py  kafka_producer_datasource.py  oltp_datasource.py  (+4 more)
tests/: conftest.py
tests/connections/: test_kafka_consumer_connection.py  test_kafka_producer_connection.py  test_postgresql_connection.py  test_s3_connection.py
tests/datasources/: test_postgresql_datasource.py  test_s3_datasource.py
(+7 files in other folders)
