[metadata]
name = data_access_layer
version = 0.1.0
author = Matan Dascalu
author_email = red.robin.matand@gmail.com
license = MIT

[options]
package_dir =
    =src
packages = find:
install_requires = 
    boto3
    botocore
    confluent_kafka
    PyYAML
    SQLAlchemy
    fastavro
    pandas
    pyarrow
    tqdm
[options.packages.find]
where = src
